# CmakeTestOpencv

./: CMakeLists.txt  main.cpp
